# autoronto_application_task

./: CMakeLists.txt  README.md
install/: local_setup.sh  setup.sh
install/autoronto_app_task_ima/lib/autoronto_app_task_ima/: listener  talker
install/autoronto_app_task_ima/share/ament_index/resource_index/package_run_dependencies/: autoronto_app_task_ima
install/autoronto_app_task_ima/share/autoronto_app_task_ima/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: solution.cpp  test_pub.cpp  test_sub.cpp
